Add new sanitization code

--- a/ModelDestillationExperiments/dataset-creation.ipynb
+++ b/ModelDestillationExperiments/dataset-creation.ipynb
@@ -18,15 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T10:13:19.187603Z",
-     "start_time": "2024-06-10T10:13:18.603382Z"
+     "end_time": "2024-07-15T14:16:16.543805Z",
+     "start_time": "2024-07-15T14:16:15.482452Z"
     }
    },
-   "outputs": [],
    "source": [
     "import sys\n",
     "import pyarrow as pa\n",
@@ -37,19 +35,32 @@
     "sys.path.insert(0, '../')\n",
     "from src.mongo_utils import collection_de, create_set, get_all_entries, set_datasplit\n",
     "from src.utils import sanitize_context"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "filter_list = [\n",
+    "    \"Holdung\",\n",
+    "]\n",
+    "\"Titel != das, context_word = das\""
+   ],
+   "id": "836bd18f906b9b98"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
    "id": "4fd9714daa9daf4a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T10:13:19.844628Z",
-     "start_time": "2024-06-10T10:13:19.840237Z"
+     "end_time": "2024-07-15T14:16:22.268649Z",
+     "start_time": "2024-07-15T14:16:22.266024Z"
     }
    },
-   "outputs": [],
    "source": [
     "def generator(col, split, postprocess=lambda x, y, a, b: (x, y, a, b)):\n",
     "    pointer = get_all_entries(col, split=split)\n",
@@ -61,75 +72,85 @@
     "        if len(buffer) == 0:\n",
     "            continue\n",
     "        yield postprocess(*buffer.pop(0))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
    "id": "f49340a067db8114",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T10:13:21.691021Z",
-     "start_time": "2024-06-10T10:13:21.687674Z"
+     "end_time": "2024-07-10T13:08:35.796659Z",
+     "start_time": "2024-07-10T13:08:35.794460Z"
     }
    },
-   "outputs": [],
    "source": [
     "test = generator(collection_de, split=\"test\")\n",
     "train = generator(collection_de, split=\"train\")\n",
     "val = generator(collection_de, split=\"val\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
    "id": "4ac7fa4b-015f-4cbe-821d-f29326940bf5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-10T13:08:38.510666Z",
+     "start_time": "2024-07-10T13:08:36.264028Z"
+    }
+   },
+   "source": [
+    "for i in train:\n",
+    "    if (i[0] == 'Stubenhocker'):\n",
+    "        print(i)"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Subregnum', 'Subregnum', \"Die Taxonomie der Biologie geht auf die Systematik Carl von Linnés zurück. Hier finden wir Begriffe wie Regnum - ''Subregnum'' - Divisio und Subdivisio, mit anderen Worten Reich - Unterreich - Abteilung und Unterabteilung.\", 'nächstkleinere Unterteilung der taxonomischen Regna (Reiche)')\n"
+      "('Stubenhocker', 'Stubenhocker', \"„Das Internet ist schon lange kein Platz für »Techies« und ''Stubenhocker'' mehr, die einsam und in sich gekehrt ihren individuellen Interessen nachgehen.“<ref>{{Literatur | Autor=Heiko Haller, Markus Hartwig, Arne Liedtke | Titel=Google Analytics und Co | TitelErg=Methoden der Webanalyse professionell anwenden| Verlag=Pearson | Jahr=2010 | Seiten=334| Online=Zitiert nach {{GBS|yMteJgL7tGMC|PA334|Hervorhebung=Stubenhocker}}}}.</ref>\", '{{ugs.}}: Person, die sich vom sozialen Leben abkapselt bzw. ihr soziales Umfeld auf einen minimalen Raum beschränkt; Person, die ihre Stube nicht verlassen und ihre Ruhe haben will')\n",
+      "('Stubenhocker', 'Stubenhocker', \"„Ich warte auf eine Kontaktanzeige, in der eine Frau einen maulfaulen ''Stubenhocker'' sucht, der weder tanzt noch wandert, aber gerne die Sopranos guckt und dabei Pralinen futtert.“<ref>Jan Weiler: ''Mein Leben als Mensch.'' Illustriert von Larissa Bertonasco. 2. Auflage. Rowohlt, Reinbek 2009, Seite 137. ISBN 978-3-463-40571-1.</ref>\", '{{ugs.}}: Person, die sich vom sozialen Leben abkapselt bzw. ihr soziales Umfeld auf einen minimalen Raum beschränkt; Person, die ihre Stube nicht verlassen und ihre Ruhe haben will')\n"
      ]
     }
    ],
-   "source": [
-    "for i in train:\n",
-    "    print(i)\n",
-    "    break"
-   ]
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "bc506b798d56ca67"
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
    "id": "9dd19c9a-3420-4179-bf58-d1ebff6ce00a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T10:13:22.585426Z",
-     "start_time": "2024-06-10T10:13:22.582801Z"
+     "end_time": "2024-07-15T14:16:26.337832Z",
+     "start_time": "2024-07-15T14:16:26.335915Z"
     }
    },
+   "source": "base_path = \"../dataset/v4/\"",
    "outputs": [],
-   "source": [
-    "base_path = \"../dataset/v2/\""
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
    "id": "b894c0a408a3fd67",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-10T10:13:26.783465Z",
-     "start_time": "2024-06-10T10:13:26.778679Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-07-15T14:16:30.666919Z",
+     "start_time": "2024-07-15T14:16:30.663969Z"
     }
    },
-   "outputs": [],
    "source": [
     "split = \"train\"\n",
     "\n",
@@ -149,24 +170,26 @@
     "    df = pd.DataFrame(data=data, columns=[\"title\", \"context_word\", \"context_sentence\", \"gt\"])\n",
     "    table = pa.Table.from_pandas(df)\n",
     "    pq.write_table(table, path)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
    "id": "6c4b8658-c365-489f-b9ae-4ee520beed8e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T10:14:17.832919Z",
-     "start_time": "2024-06-10T10:14:07.435670Z"
+     "end_time": "2024-07-15T14:16:36.972900Z",
+     "start_time": "2024-07-15T14:16:33.173230Z"
     }
    },
-   "outputs": [],
    "source": [
     "write_split(collection_de, \"train\", overwrite=True)\n",
     "write_split(collection_de, \"test\", overwrite=True)\n",
     "write_split(collection_de, \"val\", overwrite=True)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
