--- a/ModelDestillationExperiments/model-distillation-dlserver.ipynb
+++ b/ModelDestillationExperiments/model-distillation-dlserver.ipynb
@@ -13,6 +13,7 @@
     "from datasets import Dataset\n",
     "import os\n",
     "\n",
+    "from watchfiles import awatch\n",
     "\n",
     "base_path = \"/home/jfeil/MasterThesis/dataset_distillation/base-v5-unshuffled/\"\n",
     "output_path = \"/home/jfeil/MasterThesis/dataset_distillation/v1/\"\n",
@@ -353,8 +354,44 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-04T20:35:31.283563Z",
-     "start_time": "2024-08-04T20:35:31.005258Z"
+     "end_time": "2024-08-22T13:35:11.261891Z",
+     "start_time": "2024-08-22T13:35:11.258436Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import csv\n",
+    "\n",
+    "dataset = []\n",
+    "\n",
+    "with open(\"mai_val_dataset.csv\") as file:\n",
+    "    csv_reader = csv.reader(file, delimiter=',')\n",
+    "    next(csv_reader)\n",
+    "    for row in csv_reader:\n",
+    "        dataset.append(row)"
+   ],
+   "id": "a90e3937d09a5b29",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:38:05.644815Z",
+     "start_time": "2024-08-22T13:38:05.642912Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "dataset = dataset + dataset[0:32]",
+   "id": "38382a1765c6f7cd",
+   "outputs": [],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:38:16.725939Z",
+     "start_time": "2024-08-22T13:38:16.702929Z"
     }
    },
    "cell_type": "code",
@@ -374,23 +411,18 @@
     "    api_key=\"-\"\n",
     ")\n",
     "\n",
-    "def create_messages(data, experiment):\n",
+    "def create_messages(prompt):\n",
     "    return [\n",
     "            {\n",
-    "                \"role\": \"system\",\n",
-    "                \"content\": \" \".join(experiment.system_prompt)\n",
-    "            },\n",
-    "            *experiment.create_examples(),\n",
-    "            {\n",
     "                \"role\": \"user\",\n",
-    "                \"content\": experiment.question_prompt % (data['context_sentence'], data['context_word']),\n",
+    "                \"content\": prompt,\n",
     "            }\n",
     "        ]\n",
     "\n",
     "\n",
-    "async def async_prompt(row, experiment) -> None:\n",
+    "async def async_prompt(row) -> None:\n",
     "    return (await async_client.chat.completions.create(\n",
-    "        messages=create_messages(row, experiment),\n",
+    "        messages=create_messages(row[0]),\n",
     "        model=\"tgi\",\n",
     "        stream=False,\n",
     "        max_tokens=512, \n",
@@ -402,6 +434,7 @@
     "    )).choices[0].message.content\n",
     "\n",
     "\n",
+    "\n",
     "async def prompt_dataset(dataset, split, experiment, batch_size=512, warm_up=32, checkpoint_dir=\"checkpoint\"):\n",
     "    prefix = str(datetime.datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
     "    \n",
@@ -411,17 +444,17 @@
     "    responses = []\n",
     "    tasks = []\n",
     "    for i in tqdm(dataset):\n",
-    "        tasks.append(async_prompt(i, experiment))\n",
+    "        tasks.append(async_prompt(i))\n",
     "    current_batch = await asyncio.gather(*tasks[0:warm_up])\n",
     "    responses.append(current_batch)\n",
-    "    with open(f\"{checkpoint_dir}/{prefix}_0.json\", \"w\") as f:\n",
+    "    with open(f\"{checkpoint_dir}/{split}_{prefix}_0.json\", \"w\") as f:\n",
     "        print(current_batch)\n",
     "        json.dump(current_batch, f)\n",
     "\n",
     "    for i in tqdm(range(warm_up, len(dataset), batch_size)):\n",
     "        current_batch = await asyncio.gather(*tasks[i:i + batch_size])\n",
     "        responses.append(current_batch)\n",
-    "        with open(f\"{split}_{checkpoint_dir}/{prefix}_{i}.json\", \"w\") as f:\n",
+    "        with open(f\"{checkpoint_dir}/{split}_{prefix}_{i}.json\", \"w\") as f:\n",
     "            json.dump(current_batch, f)\n",
     "    return responses\n",
     "\n",
@@ -429,7 +462,56 @@
    ],
    "id": "da797b0e375f768d",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T13:41:07.599031Z",
+     "start_time": "2024-08-22T13:38:18.296215Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "responses = await prompt_dataset(dataset, \"maival\", None)",
+   "id": "6320272069f2ec81",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/132 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7388282ceea548168856308a291e4fb7"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"Während der Vorbereitungen für die ProSieben-Show 'TV total Turmspringen' ereignete sich am 14. November 2012 ein Unfall in der Berliner Schwimm- und Sprunghalle im Europasportpark. Ein Teilnehmer verlor beim Sprung vom 3-Meter-Brett die Kontrolle, prallte mit der Stirn gegen die Wasseroberfläche und zog sich möglicherweise eine Rückenmarksverletzung zu. Nachdem er drei Tage intensivmedizinisch behandelt wurde, reichte er später eine Klage gegen die Produktionsfirma Brainpool beim Arbeitsgericht Köln ein und forderte Schmerzensgeld sowie Schadensersatz.\", 'Ein Mann erlitt einen Unfall beim Springen im Schwimmbad. Er sprang von einem 3-Meter-Brett und verletzte sich beim Aufprall, da er seinen Kopf nach hinten bog. Im Krankenhaus wurde er gut versorgt, da die Ärzte befürchteten, dass auch sein Rücken verletzt sein könnte. Später verklagte der Mann die Firma, die die Show verantworrtet, weil er Schmerzen hatte und Geld wollte.', 'Oberst Streight hatte die Absicht, die strategischen Verbindungslinien von General Bragg in Nord-Alabama und Georgia zu unterbrechen. Er wurde jedoch von General Forrest abgefangen und gestoppt.', \"Magellan hatte ein großes Schiff, die 'Trinidad'. Nachts machte er dort ein Licht an. So konnten die anderen Schiffe das große Schiff sehen und ihm folgen. Auf seinem Schiff waren viele Menschen, mehr als 200. Viele kamen aus Spanien, aber auch aus anderen Ländern. Später auf einer Insel kamen noch mehr Leute dazu. Insgesamt waren es dann 242 Menschen auf fünf Schiffen.\", 'Historische Dokumente einer Schule zeigen auf, dass unter der Verwaltung von Paul und Edith Geheeb Missstände wie Missbrauchsfälle an Schülern auftraten. Diese Vorfälle wurden jedoch nie offiziell angezeigt, was auf eine mögliche Unterdrückung dieser ernsten Angelegenheiten hindeutet.', 'Es gibt ein Flugzeug namens Panavia Tornado. Es kann auf viele Arten verwendet werden. Leute aus verschiedenen Ländern haben zusammen ein neues Programm gestartet, weil ein altes Flugzeug nicht mehr gut war. Das war im Jahr 1969.', 'Die Republik Zypern ist ein souveräner Staat auf der Insel Zypern, die im östlichen Mittelmeer gelegen ist.', 'Die Veranstaltung wurde aufgrund der COVID-19-Krankheit 2020 und 2021 abgesagt.', 'Zwischen 1940 und 1943 wurden in einem Krankenhaus in Gütersloh über tausend Patienten in eine andere Klinik verlegt. Viele von ihnen haben nicht überlebt, nur etwa 220 sind zurückgekehrt.', 'Oberst Streight hatte die Absicht, die strategischen Verbindungslinien von General Bragg in Nord-Alabama und Georgia zu unterbrechen. Er wurde jedoch von General Forrest abgefangen und gestoppt.', \"Während der Vorbereitungen für die ProSieben-Show 'TV total Turmspringen' ereignete sich am 14. November 2012 ein Unfall in der Berliner Schwimm- und Sprunghalle im Europasportpark. Ein Teilnehmer verlor beim Sprung vom 3-Meter-Brett die Kontrolle, prallte mit der Stirn gegen die Wasseroberfläche und zog sich möglicherweise eine Rückenmarksverletzung zu. Nachdem er drei Tage intensivmedizinisch behandelt wurde, reichte er später eine Klage gegen die Produktionsfirma Brainpool beim Arbeitsgericht Köln ein und forderte Schmerzensgeld sowie Schadensersatz.\", 'Die Veranstaltung wurde 2020 und 2021 aufgrund der COVID-19-Krankheit abgesagt.', \"Magellan hatte ein großes Schiff, die 'Trinidad'. Nachts machte er dort ein Licht an. So konnten die anderen Schiffe das große Schiff sehen und ihm folgen. Auf seinem Schiff waren viele Menschen, mehr als 200. Viele kamen aus Spanien, aber auch aus anderen Ländern. Später auf einer Insel kamen noch mehr Leute dazu. Insgesamt waren es dann 242 Menschen auf fünf Schiffen.\", \"Auf seiner Expedition benannte Magellan das Schiff 'Trinidad'. Um den Kontakt mit den anderen Schiffen auch bei Nacht zu halten, ließ er eine Flagge anbringen. Die Besatzung bestand aus 237 Mitgliedern, überwiegend aus Spaniern, aber auch aus anderen Nationalitäten wie Portugiesen, Italienern und sogar einem Norweger. Nach einem Aufenthalt auf den Kanarischen Inseln wuchs die Crew auf\\t242 Mitglieder an, verteilt auf fünf Schiffe. Diese multinationale Zusammensetzung spiegelt die breite geografische Reichweite seiner Rekrutierung wider.\", 'Die Veranstaltung wurde 2020 und 2021 aufgrund der COVID-19-Krankheit abgesagt.', 'Offizielle Korrespondenzen der Schule, die im Archiv gefunden und in einer Dissertation aufgearbeitet wurden, deuten darauf hin, dass es bereits unter der Leitung der Gründer Paul und Edith Geheeb Missbrauchsfälle an Mädchen und Jungen gab.', 'Der Panavia Tornado war das erste Flugzeug, das für verschiedene militärische Aufgaben eingesetzt werden konnte.', 'Am 14. November 2012 kam es zu einem schweren Unfall in einem Berliner Schwimmbad, als sich ein Mann während der Vorbereitungen für eine TV-Show am 3-Meter-Brett verletzte. Er stieß mit der Stirn so stark auf das Wasser, dass sein Kopf heftig nach hinten geschleudert wurde. Er musste wegen des Verdachts auf eine Rückenmarksverletzung drei Tage lang intensiv behandelt werden. Einige Jahre später verklagte er die Produktionsfirma auf Schmerzensgeld und Schadensersatz.', 'Nach seiner Abdankung kehrte Nikolaus II. am 9. März 1917 zu seiner Frau Alexandra Fjodorowna und seinen Kindern Olga,Tatjana,Maria,Anastasia und Alexei nach Zarskoje Selo zurück. Dort wurde die Zarenfamilie samt ihrem Gefolge unter Hausarrest gestellt. Abgesehen von der eingeschränkten Bewegungsfreiheit hatte die Familie wenig Entbehrungen zu erleiden. Man vertrieb sich die Zeit mit Gartenarbeit und kurzen Spaziergängen im Garten des Alexanderpalastes.', 'Historische Dokumente einer Schule zeigen auf, dass unter der Verwaltung von Paul und Edith Geheeb Missstände wie Missbrauchsfälle an Schülern auftraten. Diese Vorfälle wurden jedoch nie offiziell angezeigt, was auf eine mögliche Unterdrückung dieser ernsten Angelegenheiten hindeutet.', \"Während der Vorbereitungen für die ProSieben-Show 'TV total Turmspringen' ereignete sich am 14. November 2012 ein Unfall in der Berliner Schwimm- und Sprunghalle im Europasportpark. Ein Teilnehmer verlor beim Sprung vom 3-Meter-Brett die Kontrolle, prallte mit der Stirn gegen die Wasseroberfläche und zog sich möglicherweise eine Rückenmarksverletzung zu. Nachdem er drei Tage intensivmedizinisch behandelt wurde, reichte er später eine Klage gegen die Produktionsfirma Brainpool beim Arbeitsgericht Köln ein und forderte Schmerzensgeld sowie Schadensersatz.\", 'Unter der Leitung von Paul und Edith Geheeb an ihrer Schule fanden Missbrauchsfälle an Kindern statt. Trotzdem wurden die Vorfälle nicht rechtlich verfolgt, was auf strukturelle Defizite in der institutionellen Reaktion hinweist.', 'In der psychiatrischen Provinzial-Heilanstalt Gütersloh wurden zwischen 1940 und 1943 darüber hinaus insgesamt 1017 Patienten im Rahmen der NS-Krankenmorde Aktion T4 und Aktion Brandt in Tötungsanstalten wie Hadamar deportiert. Nur 220 von ihnen überlebten.', \"Am 14. November 2012 kam es zu einem schweren Unfall in der Berliner Schwimm- und Sprunghalle im Europasportpark. Ein Teilnehmer der ProSieben-Show 'TV total Turmspringen' erlitt beim Versuch, vom 3-Meter-Brett zu springen, einen schweren Unfall. Der Teilnehmer verlor die Kontrolle und schlug mit der Stirn derart heftig auf die Wasseroberfläche, dass eine extreme Hyperextension des Nackens vermutet wurde. Infolge dessen erforderte sein Zustand eine dreitägige intensivmedizinische Behandlung, um eine mögliche Rückenmarksverletzung zu adressieren. Nach dem Ereignis initiierte der Geschädigte ein rechtliches Verfahren gegen die produzierende Gesellschaft, Brainpool, am Arbeitsgericht Köln, wobei er Schmerzensgeld sowie Kompensation für entstandene Schäden einforderte.\", 'In Deutschland mussten alle neuen Autos ab dem 1. Januar 1974 Sicherheitsgurte haben. Autos, die vorher schon im Verkehr waren, mussten die Gurte auch nachgerüstet werden.', 'In der Geschichte der psychiatrischen Provinzial-Heilanstalt Gütersloh,später bekannt als Westfälische Landesklinik,wurde zwischen 1940 und__1943 insgesamt__1017 Patienten im Zuge der NS-Krankenmorde Aktion T4 und Aktion Brandt deportiert. Von diesen überlebten lediglich nur__220. Die meisten wurden in Einrichtungen wie Hadamar umgebracht.', 'In Gütersloh gab es ein großes Krankenhaus. Von 1940 bis 1943 wurden viele kranke Menschen weggebracht und nicht mehr zurückgebracht. Nur wenige kamen zurück.', 'In der Geschichte der psychiatrischen Provinzial-Heilanstalt Gütersloh,später bekannt als Westfälische Landesklinik,wurde zwischen 1940 und__1943 insgesamt__1017 Patienten im Zuge der NS-Krankenmorde Aktion T4 und Aktion Brandt deportiert. Von diesen überlebten lediglich nur__220. Die meisten wurden in Einrichtungen wie Hadamar umgebracht.', 'Als Nikolaus II. am 9. März 1917 abdankte, kehrte er zu seiner Familie in Zarskoje Selo zurück. Zu seiner Familie zählten seine Frau Alexandra und seine fünf Kinder. Die ganze Familie wurde dort unter Hausarrest gestellt, hatte jedoch die Freiheit, sich in ihrem großen Garten etwas zu bewegen. Sie nutzten diese Möglichkeit für Gartenarbeit und kurze Spaziergänge.', 'Nach seiner Abdankung konnte Nikolaus II. am 9. März 1917 zu seiner Familie zurückkehren, die in Zarskoje Selo lebte. Dort wurden er, seine Frau Alexandra und seine Kinder Olga, Tatjana, Maria, Anastasia und Alexei unter Hausarrest gestellt. Die Einschränkungen im Hausarrest waren dennoch gering, sodass sie ihre Zeit mit Aktivitäten wie Gartenarbeit und kurzen Spaziergängen im Garten des Alexanderpalastes verbringen konnten.', 'Unter der Leitung von Paul und Edith Geheeb fanden an ihrer Schule Missbrauchsfälle an Kindern statt. Trotzdem wurden die Vorfälle zu keinem Zeitpunkt rechtlich verfolgt.', 'In einer Schule gab es früher schlechte Vorfälle mit Kindern. Die Schule wurde von Paul und Edith geleitet. Sie haben nichts unternommen, um die Kinder zu schützen. Niemand hat diese Fälle der Polizei gemeldet.']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "e44d464bcbaa4ca887ce643e94dc51d5"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 20
   },
   {
    "metadata": {},
